[package]
name = "rusty-bot-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
substring = "*"
futures = "0.3"
lazy_static = "1"
rand = "*"
zip = "0.6.2"
mongodb = "2.2.1"
reqwest = {version = "0.11.10", features = ["blocking"]}
regex = "1.5.5"
async-trait = "0.1.53"